[gd_scene load_steps=4 format=2]

[ext_resource path="res://Props/BossDoor.gd" type="Script" id=1]
[ext_resource path="res://Temp Assets/PixelFantasy_Caves_1.0/props1.png" type="Texture" id=2]
[ext_resource path="res://Temp Assets/Bit-Bonanza-10x10/no-background/Misc-no-bg.png" type="Texture" id=3]

[node name="BossDoor" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1088, 304, 144, 144 )

[node name="LockWest" type="Sprite" parent="."]
visible = false
position = Vector2( -64, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 200, 10, 10 )

[node name="LockEast" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -80 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 200, 10, 10 )

[node name="LockSouth" type="Sprite" parent="."]
visible = false
position = Vector2( 64, 0 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 0, 200, 10, 10 )
